--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,7 @@ cryptography==43.0.0
 dj-database-url==2.2.0
 Django==5.0.8
 django-cors-headers==4.4.0
+django-heroku==0.3.1
 django-storages==1.14.4
 djangorestframework==3.15.2
 firebase-admin==6.5.0
@@ -44,6 +45,7 @@ pycparser==2.22
 PyJWT==2.9.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 python-environ==0.4.54
 requests==2.32.3
 rsa==4.9
