--- a/frontend/android/settings.gradle
+++ b/frontend/android/settings.gradle
@@ -44,7 +44,7 @@ if (getRNMinorVersion() >= 75) {
   }
 }
 
-rootProject.name = 'frontend'
+rootProject.name = 'Cycles'
 
 dependencyResolutionManagement {
   versionCatalogs {
