--- a/frontend/ios/Podfile
+++ b/frontend/ios/Podfile
@@ -34,7 +34,7 @@ install! 'cocoapods',
 
 prepare_react_native_project!
 
-target 'frontend' do
+target 'Cycles' do
   use_expo_modules!
   config = use_native_modules!
 
@@ -70,11 +70,6 @@ target 'frontend' do
   end
 
   post_integrate do |installer|
-    begin
-      expo_patch_react_imports!(installer)
-    rescue => e
-      Pod::UI.warn e
-    end
     begin
       expo_patch_react_imports!(installer)
     rescue => e
