--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,16 +16,17 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-firebase/app": "^20.4.0",
-    "@react-native-firebase/auth": "^20.4.0",
-    "@react-native-firebase/messaging": "^20.5.0",
+    "@react-native-firebase/app": "^21.4.0",
+    "@react-native-firebase/auth": "^21.4.0",
+    "@react-native-firebase/messaging": "^21.4.0",
     "@react-navigation/native": "^6.0.2",
+    "abort-controller": "^3.0.0",
     "axios": "^1.7.3",
     "expo": "~51.0.24",
     "expo-av": "~14.0.7",
     "expo-build-properties": "~0.12.5",
     "expo-constants": "~16.0.2",
-    "expo-dev-client": "~4.0.26",
+    "expo-dev-client": "~4.0.29",
     "expo-device": "~6.0.2",
     "expo-font": "~12.0.9",
     "expo-image-picker": "~15.0.7",
@@ -37,7 +38,6 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
-    "firebase": "^10.12.5",
     "moment": "^2.30.1",
     "npm": "^10.8.3",
     "react": "18.2.0",
@@ -56,7 +56,8 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-toast": "^1.0.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "supports-hyperlinks": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
