--- a/frontend/app.json
+++ b/frontend/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "Cycles",
     "slug": "Cycles",
-    "version": "1.0.0",
+    "version": "2.0.1",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "cycles",
@@ -11,6 +11,7 @@
       "backgroundColor": "#111111"
     },
     "ios": {
+      "buildNumber": "2" ,
       "entitlements": {
         "aps-environment": "production"
       },
