--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-firebase/app": "^21.4.0",
+    "@react-native-firebase/app": "^21.5.0",
     "@react-native-firebase/auth": "^21.4.0",
     "@react-native-firebase/messaging": "^21.4.0",
     "@react-navigation/native": "^6.0.2",
@@ -63,6 +63,7 @@
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
