--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,11 +38,12 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "json5": "^2.2.3",
     "moment": "^2.30.1",
-    "npm": "^10.8.3",
+    "npm": "^10.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "^0.74.3",
+    "react-native": "0.74.5",
     "react-native-actionsheet": "^2.4.2",
     "react-native-circular-progress": "^1.4.0",
     "react-native-confirmation-code-input": "^1.0.4",
@@ -55,7 +56,6 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
-    "react-native-toast": "^1.0.1",
     "react-native-web": "~0.19.10",
     "supports-hyperlinks": "^3.1.0"
   },
@@ -63,7 +63,6 @@
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
-    "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
