--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,10 +9,11 @@ cffi==1.17.0
 charset-normalizer==3.3.2
 cryptography==43.0.0
 dj-database-url==2.2.0
-Django==5.0.8
+Django==5.1.3
 django-cors-headers==4.4.0
 django-heroku==0.3.1
 django-storages==1.14.4
+django-taggit==6.1.0
 djangorestframework==3.15.2
 firebase-admin==6.5.0
 google-api-core==2.19.1
